syntax = "proto3";

option csharp_namespace = "ReactWithDotnet";

package weather;

service WeatherService {
  rpc GetWeatherForecast (WeatherRequest) returns (WeatherResponse);
}

message WeatherRequest {
  // Empty request
}

message WeatherResponse {
  repeated WeatherData forecasts = 1;
}

message WeatherData {
  string date = 1;
  int32 temperature_c = 2;
  int32 temperature_f = 3;
  string summary = 4;
}